--- a/content/c3sr-outlook.tex
+++ b/content/c3sr-outlook.tex
@@ -15,6 +15,7 @@ potential für Zukunft und Systeme mit großen Caches -> KNL}
 \Todo{Note to RLE: Falls für höherdimensionalen Entitäten gelöst wird, entstehen kleine Blockmatrizen-Einträge, die
 Objekt total aufblähen, falls RLE verwendet wird}.
 
+\Todo{RLI-Iterator könnte auch Wert direkt speicher. Weniger Rechenaufwand. Testen?}
 %% Stuff from SRP
 
   This report introduces the threefold compressed sparse row matrix storage format (C3SR) which has been designed to
