--- a/content/c3sr-c3sr.tex
+++ b/content/c3sr-c3sr.tex
@@ -190,6 +190,8 @@
 
     \Todo{Prämisse der korrekten Indizierung der Gitterknoten explizit betonen.}
 
+    \Todo{Zusätzliches Array für MVM erwähnen}
+
   \section{Matrix-Vector Multiplication Schemes} \label{subsec:matrix-vector-multiplication-schemes}
 
     Aside from the basic CSR-like matrix-vector multiplication scheme, the C3SR format's storage scheme allows for a
