--- a/content/matrixgen-intro.tex
+++ b/content/matrixgen-intro.tex
@@ -1,3 +1,5 @@
+WIP;
+
 During the creation of the part 1 experimentation with many matrices of various shapes and sizes was required. For this
 the source code grew and eventually was encapsulated into an independent project.
 
@@ -12,5 +14,5 @@ Note: Makes intensive use of TMP the capabilities of which have enjoyed massive 
 the c++ standard. hence C++20 is used and users with version limitations (such as cuda zealots) are required to write a
 simple wrapper to create a static library.
 
-blablbal ... Output object format specified as template parameter making the interface easily expandable to different
+Output object format specified as template parameter making the interface easily expandable to different
 output formats.
