--- a/content/matrixgen-modules.tex
+++ b/content/matrixgen-modules.tex
@@ -11,7 +11,7 @@
     The interface comprises three parameters which characterize the matrix: The \keyword{grid dimensions} define the extent
     of the grid as the number of nodes in the $x$, $y$ and $z$ directions. 2-dimensional grids may be imitated by
     setting the $z$-dimension to $1$. As with all other modules, the matrix object type is specified as template
-    parameter. asd
+    parameter.
 
     \begin{minted}[fontsize=\footnotesize]{c++}
 #include <array>
@@ -33,9 +33,14 @@ int main() {
 }
     \end{minted}
 
+    \Todo{Weightfn erläutern}
+
   \section{\texttt{matrixgen::create}}
 
     Usage for small, handcrafted matrices (unittesting, manual debugging ... )
+
+    \Todo{Inhalt}
+
     \begin{minted}[fontsize=\footnotesize]{c++}
 #include <iostream>
 #include <matrixgen/core>
@@ -58,3 +63,9 @@ int main() {
   \section{\texttt{matrixgen::to\_svg}}
 
     Svg has been chosen as landing pad for different output format.
+
+    \Todo{Inhalt}
+
+  \section{\texttt{matrixgen::interleave}}
+
+    \Todo{Inhalt}
